Sign up and Login pages edited

--- a/templates/signup/index.html
+++ b/templates/signup/index.html
@@ -17,7 +17,7 @@
 					<img src="img/ListenUp_logo_white.png" alt="listenUp_logo">
 				</div>
 
-				<div class="homebutton">
+				<div class="homeButton">
 
 				<a href="http://www.google.com">
 					<button class="button">Home </button>
@@ -49,7 +49,7 @@
                         </div>
                     </form>
                     <div class="login">
-                        Already have an account? Sign in <a href="t:\School 2017-18\Software Engineering\listenUP\templates\login\index.html" src="login/index.html">here</a>
+                        Already have an account? Sign in <a href="t:\School 2017-18\Software Engineering\listenUP\templates\login\index.html">here</a>
                     </div>
 					
 					
