--- a/templates/signup/css/style.css
+++ b/templates/signup/css/style.css
@@ -37,7 +37,7 @@ body {
     width: 100%;
 }
 
-#header .button{
+#header .homeButton .button{
     background-color: #475c64;
     border: 2px solid;
     border-radius: 5px;
