--- a/templates/credits/index.html
+++ b/templates/credits/index.html
@@ -39,26 +39,48 @@
 		<div id="main" class="clearfix">
             <h1 class="title">Credits</h1>
 			<div class="page_wrap">
-				<div class="login">
+				<div class="credits">
+
+                    <div class="audio_video">
+                        <p>audio & video</p>
+                        <a href="https://www.easy-languages.org/">
+                            <img class="img1" src="img/EasyLanguages.png" alt="easylanguage">
+                        </a>
+                        <a href="http://www.shutupandgo.travel/">
+                            <img class="img2" src="img/shutupandgo.png" alt="shupupandgo">
+                        </a>
+                    </div>
+
+                    <div class="technology">
+                        <p>technology</p>
+
+                        <img class="img1" src="img/nodeJS.png" alt="nodejs">
+                        <img class="img2" src="img/reactJS.png" alt="reactjs">
+                        <img class="img3" src="img/webpack-logo-horizontal.png" alt="webpack">
+                        <img class="img4" src="img/mongodb-logo.png" alt="mongodb">
+
+                    </div>
                     
-                    <form action="/submit.php">
-                        
-                        <div class="input_wrapper">
-                            <img src="img/" alt="img">
-                            <input type="email" name="email" placeholder="Your Email" maxlength="30" size="30" >
+                    <div class="team">
+                        <p>team</p>
+
+                        <div class="krystina">
+                            <p class="p1">Krystina Kuba</p>
                         </div>
 
-                        <div class="input_wrapper">
-                            <img src="img/" alt="img">
-                            <input type="password" name="password" placeholder="Your Password" maxlength="30" size="30" >
-						</div>
-						
-						<div class="input_wrapper">
-							<button type="submit" value="Submit">Login</button>
-						</div>
-                    </form>
-                    <div class="signup">
-                        Don't have an account? Make on <a href="t:\School 2017-18\Software Engineering\listenUP\templates\signup\index.html">here</a>
+                        <div class="jose">
+                            <p class="p2">Jose Platas</p>
+                        </div>
+
+                        <div class="terrence">
+                            <p class="p3">Terrence Tran</p>
+                        </div>
+
+                        <div class="jennifer">
+                            <p class="p4">Jennifer Tsan</p>
+                        </div>
+
+
                     </div>
 					
 					
