--- a/templates/dashboard/css/dashboard.css
+++ b/templates/dashboard/css/dashboard.css
@@ -14,6 +14,11 @@ body{
   padding: 0 10px;
   margin: auto;
 }
+.page_wrap::after{
+  clear: both;
+  content: "";
+  display: block;
+}
 
 /*header*/
 #header{
@@ -42,13 +47,20 @@ body{
 }
 #header .menu ul{
   list-style: none;
+  float: right;
 }
-#header .menu ul li{
+#header .menu > ul::after{
+  content: "|";
+  color: #fff;
+  font-size: 20px;
+  margin: 5px 0;
+}
+#header .menu > ul > li{
   width: auto;
   padding-left: 10px;
   display: inline-block;
 }
-#header .menu ul li a{
+#header .menu > ul > li > a{
   width: auto;
   height: 50px;
   line-height: 50px;
@@ -57,6 +69,81 @@ body{
   text-decoration: none;
   font-size: 16px;
   font-weight: normal;
+}
+#header .menu .account_wrap{
+  float: right;
+  position: relative;
+}
+#header .menu .account_wrap .account{
+  width: auto;
+  height: 50px;
+  line-height: 50px;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+#header .menu .account_wrap .account .points{
+  font-size: 20px;
+  color: #fff;
+  float: left;
+  margin-right: 10px;
+}
+#header .menu .account_wrap .account .avatar{
+  width: 40px;
+  height: 40px;
+  margin: 5px 0;
+  border-radius: 100%;
+  border: 4px solid #fff;
+  float: left;
+  background: #fff;
+  overflow: hidden;
+}
+#header .menu .account_wrap .account .avatar img{
+  width: 100%;
+}
+#header .menu .account_wrap .account .avatar img::after{
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: red;
+}
+#header .menu .account_wrap .account .down_arrow{
+  padding: 20px 0;
+  padding-left: 5px;
+  float: left;
+}
+#header .menu .account_wrap ul{
+  display: none;
+  background: #fff;
+  position: absolute;
+  right: 0;
+  padding: 10px 0;
+  z-index: 100;
+  border-radius: 5px;
+  box-shadow: 0 1px 0 0 rgba(0,0,0,0.1), 0 0 1px 1px rgba(0,0,0,0.08);
+}
+#header .menu .account_wrap ul::before{
+  position: absolute;
+  content: "";
+  background: #fff;
+  width: 12px;
+  height: 12px;
+  border-radius: 3px 0 0 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  box-shadow: -2px -2px 2px rgba(0,0,0,0.08);
+  right: 8px;
+  top: -6px;
+}
+#header .menu .account_wrap ul li a{
+  padding: 5px 10px;
+  font-size: 16px;
+  color: #4d4d4f;
+  text-decoration: none;
+  display: block;
 }
 /*main container*/
 #main{
@@ -71,10 +158,10 @@ body{
   height: 40px;
   line-height: 40px;
   font-size: 14px;
-  background: #f1f1f1;
+  background: #4d4d4d;
   padding: 0 10px;
   text-align: center;
-  color: #4d4d4f;
+  color: #fff;
   -webkit-box-shadow: 0px -5px 10px 0px rgba(204, 204, 204, 0.75);
   -moz-box-shadow: 0px -5px 10px 0px rgba(204, 204, 204, 0.75);
   box-shadow: 0px -5px 10px 0px rgba(204, 204, 204, 0.75);
@@ -115,15 +202,19 @@ body{
   text-align: left;
 }
 .dashboard .language_progress ul li{
-  width: 120px;
-  height: 120px;
+  width: 30%;
   text-align: center;
-  line-height: 120px;
-  background: #d2ead7;
   border-radius: 100%;
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 2%;
   font-size: 16px;
+}
+.dashboard .language_progress ul li img{
+  width: 100%;
+}
+.dashboard .language_progress ul li p{
+  font-size: 16px;
+  line-height: 20px;
 }
 .dashboard .total_points{
   width: 48%;
@@ -133,10 +224,56 @@ body{
 .dashboard .total_points .points{
   font-size: 100px;
   line-height: 100px;
-  color: #d2ead7;
+  color: #33669a;
 }
 
+/*achievement*/
+.dashboard .achievements ul{
+  list-style: none;
+  text-align: left;
+}
+.dashboard .achievements ul li{
+  width: 18%;
+  text-align: center;
+  border-radius: 100%;
+  display: inline-block;
+  margin-right: 1%;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.dashboard .achievements ul li img{
+  width: 100%;
+}
+.dashboard .achievements ul li p{
+  font-size: 16px;
+  line-height: 20px;
+}
 
+/*statistics*/
+.dashboard .stats ul{
+  list-style-type: none;
+}
+.dashboard .stats ul li{
+  width: 23%;
+  text-align: center;
+  border-radius: 100%;
+  display: inline-block;
+  margin-right: 1%;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+.dashboard .stats ul li .time{
+  width: 100%;
+  height: 100px;
+  line-height: 100px;
+  font-size: 60px;
+  color: #33669a;
+  display: block;
+  text-align: center;
+}
+.dashboard .stats ul li .time span{
+  font-size: 20px;
+}
 
 
 
