--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -18,6 +18,25 @@
         </div>
 
         <div class="menu">
+          <div class="account_wrap">
+            <div class="account">
+              <span class="points">382</span>
+              <span class="avatar">
+                <img src="img/batman_icon.png" alt="">
+              </span>
+              <img class="down_arrow" src="img/arrow_down.svg" alt="">
+            </div>
+            <ul>
+              <li>
+                <a href="#">Settings</a>
+              </li>
+              <li>
+                <a href="#">Logout</a>
+              </li>
+            </ul>
+          </div>
+          <!-- endof::account_wrap -->
+
           <ul>
             <li>
               <a href="#">Courses</a>
@@ -25,10 +44,8 @@
             <li>
               <a href="#">Dashboard</a>
             </li>
-            <li>
-              <a href="#">Log Out</a>
-            </li>
           </ul>
+
         </div>
       </div>
     </div>
@@ -41,9 +58,18 @@
           <div class="box_wrap language_progress">
             <h2>Languages in progress:</h2>
             <ul>
-              <li>Spanish</li>
-              <li>French</li>
-              <li>Japanese</li>
+              <li>
+                <img src="img/icon_en.png" alt="">
+                <p>English</p>
+              </li>
+              <li>
+                <img src="img/icon_es.png" alt="">
+                <p>Spanish</p>
+              </li>
+              <li>
+                <img src="img/icon_fr.png" alt="">
+                <p>French</p>
+              </li>
             </ul>
           </div>
 
@@ -57,11 +83,62 @@
 
           <div class="box_wrap achievements">
             <h2>Achiements:</h2>
-
+            <ul>
+              <li>
+                <img src="img/achievement_1.svg" alt="">
+                <p>Achievement 1</p>
+              </li>
+              <li>
+                <img src="img/achievement_2.svg" alt="">
+                <p>Achievement 1</p>
+              </li>
+              <li>
+                <img src="img/achievement_3.svg" alt="">
+                <p>Achievement 1</p>
+              </li>
+              <li>
+                <img src="img/achievement_1.svg" alt="">
+                <p>Achievement 1</p>
+              </li>
+              <li>
+                <img src="img/achievement_2.svg" alt="">
+                <p>Achievement 1</p>
+              </li>
+              <li>
+                <img src="img/achievement_3.svg" alt="">
+                <p>Achievement 1</p>
+              </li>
+              <li>
+                <img src="img/achievement_1.svg" alt="">
+                <p>Achievement 1</p>
+              </li>
+            </ul>
           </div>
 
-          <div class="box_wrap statistics">
+          <div class="box_wrap stats">
             <h2>Statistics:</h2>
+
+            <ul>
+              <li>
+                <div class="time">
+                  4<span>hours</span>
+                </div>
+                <p>Time spend learning</p>
+              </li>
+              <li>
+                <div class="time">
+                  90%<span></span>
+                </div>
+                <p>Percent of Correct answers</p>
+              </li>
+              <li>
+                <div class="time">
+                  30<span>minutes</span>
+                </div>
+                <p>Time skipped</p>
+              </li>
+            </ul>
+
 
           </div>
 
