started incorporating templates into react

--- a/templates/transcription/index.html
+++ b/templates/transcription/index.html
@@ -8,6 +8,8 @@
     </head>
 
     <body>
+    
+    <div class="transcription">
         <header class="page-header flex-container">
             <div class="page-header-logo"><img src="img/ListenUp_logo_white.png"></div>
 
@@ -119,5 +121,6 @@
             </section>
 
         </div>
+    </div>
     </body>
 </html>
