--- a/app/exercises/transcription/transcription.css
+++ b/app/exercises/transcription/transcription.css
@@ -127,6 +127,7 @@
 }
 
 :local .char_button {
+    background-color: none;
     text-decoration: none;
     font-size: 1.4em;
     font-family: Arial, Helvetica, sans-serif;
@@ -134,12 +135,10 @@
 }
 
 :local .enter_button {
-    display: inline-block;
     width: 100%;
     line-height: 50px;
     border-radius: 5px;
     
-    text-decoration: none;
     color: #475055;
     background-color: #9ed4ae;
     font-size: 1.5em;
