--- a/app/user/signup/signup.css
+++ b/app/user/signup/signup.css
@@ -10,6 +10,8 @@
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  /*---header---*/
   
   :local .signup_header {
     font-size: 2em;
@@ -18,8 +20,27 @@
     color: #33669a;
   }
   
+   /*---form---*/
+
   :local .signup_form {
     align-self: center;
+    width: 300px;
+  }
+
+  /*---form fields---*/
+
+  :local .form_icon {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #475c64;
+    width: 40px;
+    height: 40px;
+  }
+
+  .inputField {
+    color: #475c64;
+    padding-left: 10px;
+    width: 100%;
   }
   
   :local .submitButton {
@@ -29,30 +50,28 @@
     line-height: 30px;
     font-size: 1.2em;
   }
-  
-  :local .topSpace {
-    margin-top: 10px;
-  }
-  
+
+  /*---tooltip---*/
+
   :local .signup_tooltip {
     font-size: 12px;
   }
-  
-  :local .form_icon {
-    border-style: solid;
-    border-width: 1px;
-    border-color: #475c64;
-    width: 30px;
-    height: 30px;
-  }
-  
+
   :local .login_link {
     color: #33669a;
     text-decoration: none;
     font-style: italic;
   }
 
-  .inputField {
-    color: #a8a8a8;
-    padding-left: 10px;
+  :local .topSpace {
+    margin-top: 10px;
+  }
+
+  /*---responsive---*/
+  
+  @media only screen and (min-width: 700px) {
+    :local .signup_form {
+      min-width: 300px;
+      max-width: 500px;
+    }
   }
