--- a/app/header/header.css
+++ b/app/header/header.css
@@ -1,13 +1,20 @@
+
+:local .stickyContainer {
+    position: fixed;
+    width: 100%;
+}
+
 :local .flex_container {
     display: flex;
 }
 
 :local .page_header {
     background-color: #475c64;
-    padding: 10px 2%;
 }
 
 :local .header_logo {
+    padding-left: 20px;
+    padding-top: 5px;
     flex: 1;
 }
 
@@ -19,6 +26,7 @@
 :local .nav_buttons {
     list-style-type: none;
     padding-left: 0;
+    padding-right: 20px;
 }
 
 :local .nav_buttons li {
@@ -52,10 +60,4 @@
 
 :local .nav_buttons li+li {
     padding-left: 3%;
-}
-
-:local .stickyContainer {
-    position: fixed;
-    width: 100%;
-    top: 0;
 }
