--- a/app/user/signup/signup.css
+++ b/app/user/signup/signup.css
@@ -1,14 +1,18 @@
+:local .signup {
+  background-color: #fffef3;  
+}
 
 :local .flex_container {
     display: flex;
   }
   
   :local .page_container {
+    min-height: 100vh;
     flex-direction: column;
     text-align: center;
-    min-height: 100vh;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
+    padding-top: 10%;
   }
 
   /*---header---*/
