changed bg color on avatars

--- a/app/credits/styles.css
+++ b/app/credits/styles.css
@@ -95,7 +95,7 @@
 :local .member_photo_container {
     width: 150px;
     height: 150px;
-    background-color: #d2ead7;
+    background-color: #9ed4ae;
 }
 
 :local .member_photo {
