--- a/app/user/dashboard/styles.css
+++ b/app/user/dashboard/styles.css
@@ -22,9 +22,7 @@
 
 :local .dashboard_section {
     width: 100%;
-    border-style: solid;
-    border-color: #333;
-    border-width: 1px;
+    background-color: #fff;
     margin-bottom: 20px;
 }
 
@@ -56,21 +54,10 @@
     margin-top: 10px;
 }
 
-/*---In Progress---*/
+/*--- Courses ---*/
 
 :local .language_selector {
-    flex: 1;
-    border-style: solid;
-    border-color: #333;
-    border-width: 1px;
-    width: 100%;
-}
-
-:local .lifetime_points {
-    width: 100%;
-    border-style: solid;
-    border-color: #333;
-    border-width: 1px;
+    justify-content: center;
 }
 
 /*---Responsive---*/
