--- a/app/user/dashboard/statistics/styles.css
+++ b/app/user/dashboard/statistics/styles.css
@@ -1,12 +1,23 @@
 :local .flex_container {
     display: flex;
+}
+
+:local .statistics_container {
+    padding-left: 30px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+:local .stat {
     flex-direction: column;
+    text-align: left;
+    max-width: 150px;
 }
 
 :local .stats_tooltip {
+    font-style: italic;
     font-weight: lighter;
     color: #475055;
-    padding-left: 20px;
     margin-top: 10px;
     margin-bottom: 0px;
 }
@@ -14,8 +25,7 @@
 :local .stats_text {
     margin-top: 20px;
     margin-bottom: 0px;
-    font-size: 6em;
+    font-size: 4em;
     font-weight: bold;
     color: #9ed4ae;
-    text-align: center;
 }
